codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__clean_subagent_notification_history_replay.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: combined
---
<subagent_notification>
{"agent_path":"/root/task_rust","status":{"completed":"Found the bug and added regression coverage."}}
</subagent_notification>
